# seashell

./: CMakeLists.txt  README.md
src/: arguments_manager.c  arguments_manager.h  autocompletion.c  autocompletion.h  builtin.c  builtin.h  execution.c  execution.h  get_opt.c  history_manager.c  history_manager.h  list.h  main.c  ncurses_proxy.c  ncurses_proxy.h  option_manager.c  parser.c  parser.h  seashell.c  seashell.h  stream_manager.c  stream_manager.h  string_fct.c  string_fct.h
